# kaggle-predict_energy_behavior_of_prosumers

./: .gitignore  README.md  pyproject.toml
configs/: download_geo_data.yaml  inference.yaml  inference_kaggle.yaml  prepare_data.yaml  prepare_stations.yaml  train.yaml
configs/cv/: monthly_kfold.yaml  temporal_kfold.yaml
configs/dir/: alpha.yaml  kaggle.yaml
configs/model/: avg-2-orders_and_diff-lgbms.yaml  solar_out_and_diff-lgbms.yaml  solar_out_and_diff-lgbms_small.yaml  solar_out_and_lgbms.yaml  solar_out_and_lgbms_small.yaml
configs/split/: temporal.yaml
notebooks/: 1-EDA.ipynb  10-consumption-model.ipynb  11-check-04-05.ipynb  12-prod-nn.ipynb  2-series-interactive.ipynb  4-predictive-modelling.ipynb  5-1-model-prduction.ipynb  7-weather-target-EDA.ipynb  8-weather_features.ipynb  check_train_features.ipynb
reports/: 1-EDA.html
scripts/: job_notebook_cpu.sh  update_data.sh  update_sources.sh
src/enefit/: public_timeseries_testing_util.py
src/predict_energy_behavior/: config.py  cv.py  inference.py  train.py  utils.py
src/predict_energy_behavior/data/: constants.py  data_storage.py  download_geo.py  read.py
src/predict_energy_behavior/enefit/: public_timeseries_testing_util.py
src/predict_energy_behavior/features/: __init__.py  feature_generator.py  make_features.py  prepare_stations.py  process.py
src/predict_energy_behavior/models/: base_model.py  joined_model.py  solar_output_regressor.py
src/predict_energy_behavior/utils/: common.py
src/predict_energy_behavior/visualize/: inspect_solar_output.py  widget_eda.py
(+9 files in other folders)
